--- a/taplamweb/requirements.txt
+++ b/taplamweb/requirements.txt
@@ -1,8 +1,4 @@
-asgiref==3.5.0
-brotlipy==0.7.0
-certifi==2021.10.8
+django-heroku==2.0
 Django==4.0.2
-sqlparse==0.4.2
-tzdata==2021.5
-urllib3==1.26.7
-wincertstore==0.2
+gunicorn
+
